Prevent wrapping with apply/cancel buttons

--- a/Site/webapp/wdkCustomization/js/client/components/SiteSearch/SiteSearch.scss
+++ b/Site/webapp/wdkCustomization/js/client/components/SiteSearch/SiteSearch.scss
@@ -323,6 +323,7 @@
   &--FilterButtons {
     font-weight: bold;
     transition: all 250ms ease-in-out;
+    white-space: nowrap;
 
     &__visible {
       visibility: visible;
